Add full-text search capabilities for transactions and enhance filtering options